--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Studio</title>
   </head>
   <body>
     <!---------------backdrop----------------->
-    <div class="backdrop is-hidden"data-modal>
+    <!-- <div class="backdrop is-hidden"data-modal>
       <div class="modal" >
         <button data-modal-close class="modal-b" type="button"><svg width="11" height="11"><use href="./imges/symbol-defs.svg#icon-Vector"></use>
         </svg></button>
@@ -57,9 +57,9 @@
 <button class="form-button"  type="submit">Отправить</button>   
   </form>
       </div>
-    </div>
+    </div> -->
     <!-----------------header--------------->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container head">
         <a href="" class="logo header-logo"><span class="header-logo__color" >Web</span>Studio</a>
         <nav>
@@ -88,52 +88,60 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-------------------------unique-main-------->
     <main>
       <!----------------hero--------------------->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero__title">Эффективные решения<br />для вашего бизнеса</h1>
           <button data-modal-open class="hero__button" type="button" >Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
       <!---------------skill-cards--------------->
       <section class="skill__cards">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="cards">
-            <li class="crads__item"><div class="cards__container">
-              <svg class="cards__icon" width="70" height="70">
-                <use href="./imges/symbol-defs.svg#icon-antenna"></use>
-              </svg></div>
+            <li class="cards__item">
+              <div class="cards__container">
+                <svg class="cards__icon" width="70" height="70">
+                  <use href="./imges/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="cards__title">Внимание к деталям</h3>
               <p class="cards__text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="cards__item"><div class="cards__container">
-              <svg class="cards__icon" width="70" height="70">
-                <use href="./imges/symbol-defs.svg#icon-clock"></use>
-              </svg> </div>
+            <li class="cards__item">
+              <div class="cards__container">
+                <svg class="cards__icon" width="70" height="70">
+                  <use href="./imges/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="cards__title">Пунктуальность</h3>
               <p class="cards__text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="cards__item"><div class="cards__container">
-              <svg class="cards__icon" width="70" height="70">
-                <use href="./imges/symbol-defs.svg#icon-diagram"></use>
-              </svg></div>
+            <li class="cards__item">
+              <div class="cards__container">
+                <svg class="cards__icon" width="70" height="70">
+                  <use href="./imges/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="cards__title">Планирование</h3>
               <p class="cards__text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="cards__item"><div class="cards__container">
-              <svg class="cards__icon" width="70" height="70">
-                <use href="./imges/symbol-defs.svg#icon-astronaut"></use>
-              </svg></div>
+            <li class="cards__item">
+              <div class="cards__container">
+                <svg class="cards__icon" width="70" height="70">
+                  <use href="./imges/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="cards__title">Современные технологии</h3>
               <p class="cards__text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -142,30 +150,33 @@
           </ul>
         </div>
       </section>
-      <!--work typs-->
+      <!-- work typs-->
       <section class="work">
         <div class="container">
           <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work__typs">
-            <li class="work__list"><img src="./imges/image1.jpg" alt="пишем-сайты " width="370" />
-            <div >
-              <p class="work__img--text">Десктопные приложения</p>
-            </div></li>
+            <li class="work__list">
+              <img src="./imges/image1.jpg" alt="пишем-сайты " width="370" />
+              <div>
+                <p class="work__img--text">Десктопные приложения</p>
+              </div>
+            </li>
             <li class="work__list">
               <img src="./imges/image2.jpg" alt="подстраиваем сайты для телефонов" width="370" />
-              <div >
+              <div>
                 <p class="work__img--text">Мобильные приложения</p>
               </div>
             </li>
-            <li class="work__list"><img src="./imges/image3.jpg" alt="работа с apple" width="370" />
-            <div >
-              <p class="work__img--text">Дизайнерские решения</p>
-            </div>
-          </li>
+            <li class="work__list">
+              <img src="./imges/image3.jpg" alt="работа с apple" width="370" />
+              <div>
+                <p class="work__img--text">Дизайнерские решения</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
-      <!--team-->
+      <!-- team-->
       <section class="teams">
         <div class="container">
           <h2 class="team-list">Наша команда</h2>
@@ -305,58 +316,58 @@
           </ul>
         </div>
       </section>
-  
-    <!------------------------ regular customers -------------------------->
-    <section class="customers">
-      <div class="container">
-        <h2 class="customers-title">Постоянные клиенты</h2>
-        <ul class="customers-item">
-          <li class="customers-list">
-            <a class="customers-link" href="#"
-              ><svg class="customers-icon" width="106" height="60">
-                <use href="./imges/symbol-defs.svg#icon-group-yaco"></use></svg
-            ></a>
-          </li>
-          <li class="customers-list">
-            <a class="customers-link" href="#"
-              ><svg class="customers-icon" width="106" height="60">
-                <use href="./imges/symbol-defs.svg#icon-group-tageline"></use></svg
-            ></a>
-          </li>
-          <li class="customers-list">
-            <a class="customers-link" href="#"
-              ><svg class="customers-icon" width="106" height="60">
-                <use href="./imges/symbol-defs.svg#icon-Logo-campany"></use></svg
-            ></a>
-          </li>
-          <li class="customers-list">
-            <a class="customers-link" href="#"
-              ><svg class="customers-icon" width="106" height="60">
-                <use href="./imges/symbol-defs.svg#icon--Logofoster-peters"></use></svg
-            ></a>
-          </li>
-          <li class="customers-list">
-            <a class="customers-link" href="#"
-              ><svg class="customers-icon" width="106" height="60">
-                <use href="./imges/symbol-defs.svg#icon-Logo-brend"></use></svg
-            ></a>
-          </li>
-          <li class="customers-list">
-            <a class="customers-link" href="#"
-              ><svg class="customers-icon" width="106" height="60">
-                <use href="./imges/symbol-defs.svg#icon-group-tageline"></use></svg
-            ></a>
-          </li>
-        </ul>
-      </div>
-    </section>
-   </main>
 
-    <!-----------------footer------------------------->
+      <!------------------------ regular customers -------------------------->
+      <section class="customers">
+        <div class="container">
+          <h2 class="customers-title">Постоянные клиенты</h2>
+          <ul class="customers-item">
+            <li class="customers-list">
+              <a class="customers-link" href="#"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./imges/symbol-defs.svg#icon-group-yaco"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-link" href="#"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./imges/symbol-defs.svg#icon-group-tageline"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-link" href="#"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./imges/symbol-defs.svg#icon-Logo-campany"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-link" href="#"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./imges/symbol-defs.svg#icon--Logofoster-peters"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-link" href="#"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./imges/symbol-defs.svg#icon-Logo-brend"></use></svg
+              ></a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-link" href="#"
+                ><svg class="customers-icon" width="106" height="60">
+                  <use href="./imges/symbol-defs.svg#icon-group-tageline"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <!-----------------footer----------------------->
     <footer class="footer" >
     <div class="container">
        <div class="social__networks">
-       <div>
+       <div class="contact-footer">
         <a class="logo-footer" href="./index.html">Web<span class="logo-width">Studio</span></a>
           <address>
             <ul class="address">
@@ -415,6 +426,7 @@
       </div>
     
     </footer>
-  <script src="./js/modal.js"></script>
+    <script> src="./js/menu_modal.js" </script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
